python/testData/inspections/AddClass.py
class XyzzyTest:
    def testSimple(self):
        c = <caret><error descr="Unresolved reference 'Xyzzy'">Xyzzy</error>()
